--- a/index.html
+++ b/index.html
@@ -1,12 +1,21 @@
 <!DOCTYPE HTML>
+
+<html>
+<head>
+    <title>Hackintosh For You.</title>
+</head>
+<body>
+
+</body>
+</html>
+
+
 <!--
-	Prologue by HTML5 UP
-	html5up.net | @n33co
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
+	Hackintosh For You
+	document.title = "This is the new page title."
 <html>
 	<head>
-		<title>Prologue by HTML5 UP</title>
+		<title>Hackintosh For You</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -79,10 +88,9 @@
 						<div class="container">
 
 							<header>
-								<h2 class="alt">Hi! I'm <strong>Prologue</strong>, a <a href="http://html5up.net/license">free</a> responsive<br />
-								site template designed by <a href="http://html5up.net">HTML5 UP</a>.</h2>
-								<p>Ligula scelerisque justo sem accumsan diam quis<br />
-								vitae natoque dictum sollicitudin elementum.</p>
+								<h2 class="alt">Hi! I'm <strong>abtranbn</strong>, a <a href="https://www.youtube.com/watch?v=HaSd-cN7Gnc">free</a> setup all machine to mac<a href="https://www.youtube.com/watch?v=_9CjT1G4ylI">My video</a>.</h2>
+								<p>Call me to get service install hackintosh good.<br />
+								Should try service and you will love it.</p>
 							</header>
 
 							<footer>
@@ -97,26 +105,23 @@
 						<div class="container">
 
 							<header>
-								<h2>Portfolio</h2>
+								<h2>Hackintosh is best.</h2>
 							</header>
 
-							<p>Vitae natoque dictum etiam semper magnis enim feugiat convallis convallis
-							egestas rhoncus ridiculus in quis risus amet curabitur tempor orci penatibus.
-							Tellus erat mauris ipsum fermentum etiam vivamus eget. Nunc nibh morbi quis
-							fusce hendrerit lacus ridiculus.</p>
+							<p>Hackintosh For you.</p>
 
 							<div class="row">
 								<div class="4u 12u$(mobile)">
 									<article class="item">
 										<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
 										<header>
-											<h3>Ipsum Feugiat</h3>
+											<h3>Try install it.</h3>
 										</header>
 									</article>
 									<article class="item">
 										<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
 										<header>
-											<h3>Rhoncus Semper</h3>
+											<h3>Yosemite</h3>
 										</header>
 									</article>
 								</div>
@@ -124,13 +129,13 @@
 									<article class="item">
 										<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
 										<header>
-											<h3>Magna Nullam</h3>
+											<h3>Mac OSX is best operasystem.</h3>
 										</header>
 									</article>
 									<article class="item">
 										<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
 										<header>
-											<h3>Natoque Vitae</h3>
+											<h3>Beatyfull</h3>
 										</header>
 									</article>
 								</div>
@@ -138,13 +143,13 @@
 									<article class="item">
 										<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
 										<header>
-											<h3>Dolor Penatibus</h3>
+											<h3>It's greate.</h3>
 										</header>
 									</article>
 									<article class="item">
 										<a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
 										<header>
-											<h3>Orci Convallis</h3>
+											<h3>Number one</h3>
 										</header>
 									</article>
 								</div>
@@ -163,12 +168,7 @@
 
 							<a href="#" class="image featured"><img src="images/pic08.jpg" alt="" /></a>
 
-							<p>Tincidunt eu elit diam magnis pretium accumsan etiam id urna. Ridiculus
-							ultricies curae quis et rhoncus velit. Lobortis elementum aliquet nec vitae
-							laoreet eget cubilia quam non etiam odio tincidunt montes. Elementum sem
-							parturient nulla quam placerat viverra mauris non cum elit tempus ullamcorper
-							dolor. Libero rutrum ut lacinia donec curae mus vel quisque sociis nec
-							ornare iaculis.</p>
+							<p>.........</p>
 
 						</div>
 					</section>
@@ -181,10 +181,13 @@
 								<h2>Contact</h2>
 							</header>
 
-							<p>Elementum sem parturient nulla quam placerat viverra
-							mauris non cum elit tempus ullamcorper dolor. Libero rutrum ut lacinia
-							donec curae mus. Eleifend id porttitor ac ultricies lobortis sem nunc
-							orci ridiculus faucibus a consectetur. Porttitor curae mauris urna mi dolor.</p>
+							<p><br>Name: Hoang Tran Manh
+								<br>STK: 711A21562994 transaction basis 108 Tran Hung Dao - Hoan Kiem - Ha Noi
+								<br>Vietnam Joint Stock Commercial Bank for Industry and Trade
+								<br>Mobile: 0984230489
+								<br>Yahoo: tranmanhhoangdt
+								<br>Gmail:tranmanhhoang@gmail.com
+								<br>389 Truong Dinh - Hoang Mai | 194 Le Thanh Nghi - Hai Ba Trung | 676 Quang Trung - Ha Dong - TP.HN</p>
 
 							<form method="post" action="#">
 								<div class="row">
@@ -209,7 +212,7 @@
 
 				<!-- Copyright -->
 					<ul class="copyright">
-						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://metadevfoundation.org/">metadevfoundation</a></li>
 					</ul>
 
 			</div>
