--- a/index.html
+++ b/index.html
@@ -2,13 +2,12 @@
 
 <html>
 <head>
-    <title>Hackintosh For You.</title>
+    <title>Klouds.io</title>
 </head>
 <body>
 
 </body>
 </html>
-
 
 <!--
 	Hackintosh For You
@@ -33,10 +32,10 @@
 					<!-- Logo -->
 						<div id="logo">
 							<span class="image avatar48"><img src="images/avatar.jpg" alt="" /></span>
-							<h1 id="title">abtranbn</h1>
-							<p>Hackintosh For You!</p>
+							<h1 id="title">Klouds.io</h1>
+							<p>Dockerized Hosted Open Source applications in a Rancher Cloud</p>
 							<p>
-								0984230489
+								MNC
 							</p>
 						</div>
 
@@ -56,10 +55,10 @@
 
 							-->
 							<ul>
-								<li><a href="#top" id="top-link" class="skel-layers-ignoreHref"><span class="icon fa-home">Intro</span></a></li>
-								<li><a href="#portfolio" id="portfolio-link" class="skel-layers-ignoreHref"><span class="icon fa-th">Portfolio</span></a></li>
-								<li><a href="#about" id="about-link" class="skel-layers-ignoreHref"><span class="icon fa-user">About Me</span></a></li>
-								<li><a href="#contact" id="contact-link" class="skel-layers-ignoreHref"><span class="icon fa-envelope">Contact</span></a></li>
+								<li><a href="#top" id="top-link" class="skel-layers-ignoreHref"><span class="icon fa-home">Home</span></a></li>
+								<li><a href="#portfolio" id="portfolio-link" class="skel-layers-ignoreHref"><span class="icon fa-th">Apps</span></a></li>
+								<li><a href="#about" id="about-link" class="skel-layers-ignoreHref"><span class="icon fa-user">About Us</span></a></li>
+								<li><a href="#contact" id="contact-link" class="skel-layers-ignoreHref"><span class="icon fa-envelope">Contact Us</span></a></li>
 							</ul>
 						</nav>
 
@@ -88,13 +87,17 @@
 						<div class="container">
 
 							<header>
-								<h2 class="alt">Hi! I'm <strong>abtranbn</strong>, a <a href="https://www.youtube.com/watch?v=HaSd-cN7Gnc">free</a> setup all machine to mac<a href="https://www.youtube.com/watch?v=_9CjT1G4ylI">My video</a>.</h2>
-								<p>Call me to get service install hackintosh good.<br />
-								Should try service and you will love it.</p>
+								<h2 class="alt">Hanoi - Web Development - Open Source - Enterprise Software - Cloud Computing</h2>
+								<p>Klouds Inc. is a boutique providor of virtualization technology. Klouds is an Enterprise VMware Partner, a Silver level Veeam Partner and a Red Hat Solutions Provider. Founded in 2011 Klouds Inc. recognizes the unique challenges faced by customers in selecting from the myriad of products offered in the vitalization space.<br />
+								Search for the next big exit, the VCs, and grants.Klouds.io offers open-source application hosting through 1-click setup so businesses and entrepreneurs can focus on what they do best.
+
+                - See more at: http://metadevfoundation.org/#sthash.8ZrZYwz8.dpuf
+
+                </p>
 							</header>
 
 							<footer>
-								<a href="#portfolio" class="button scrolly">Magna Aliquam</a>
+								<a href="#portfolio" class="button scrolly">Join Us</a>
 							</footer>
 
 						</div>
@@ -105,23 +108,24 @@
 						<div class="container">
 
 							<header>
-								<h2>Hackintosh is best.</h2>
+								<h2>
+Apps</h2>
 							</header>
 
-							<p>Hackintosh For you.</p>
+							<p>I'M BASED IN Hanoi, Vietnam</p>
 
-							<div class="row">
+              <div class="row">
 								<div class="4u 12u$(mobile)">
 									<article class="item">
 										<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
 										<header>
-											<h3>Try install it.</h3>
+											<h3>Bitcore</h3>
 										</header>
 									</article>
 									<article class="item">
 										<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
 										<header>
-											<h3>Yosemite</h3>
+											<h3>Codeboxide</h3>
 										</header>
 									</article>
 								</div>
@@ -129,13 +133,13 @@
 									<article class="item">
 										<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
 										<header>
-											<h3>Mac OSX is best operasystem.</h3>
+											<h3>Codiad</h3>
 										</header>
 									</article>
 									<article class="item">
 										<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
 										<header>
-											<h3>Beatyfull</h3>
+											<h3>Diaspora</h3>
 										</header>
 									</article>
 								</div>
@@ -143,17 +147,96 @@
 									<article class="item">
 										<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
 										<header>
-											<h3>It's greate.</h3>
+											<h3>Discourse</h3>
 										</header>
 									</article>
 									<article class="item">
 										<a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
 										<header>
-											<h3>Number one</h3>
+											<h3>Etherpad</h3>
 										</header>
 									</article>
 								</div>
-							</div>
+							</div><div class="row">
+								<div class="4u 12u$(mobile)">
+									<article class="item">
+										<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
+										<header>
+											<h3>Ethersheet</h3>
+										</header>
+									</article>
+									<article class="item">
+										<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
+										<header>
+											<h3>Exercism.io</h3>
+										</header>
+									</article>
+								</div>
+								<div class="4u 12u$(mobile)">
+									<article class="item">
+										<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
+										<header>
+											<h3>Flarum</h3>
+										</header>
+									</article>
+									<article class="item">
+										<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
+										<header>
+											<h3>Ghost</h3>
+										</header>
+									</article>
+								</div>
+								<div class="4u$ 12u$(mobile)">
+									<article class="item">
+										<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
+										<header>
+											<h3>Gitlab</h3>
+										</header>
+									</article>
+									<article class="item">
+										<a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
+										<header>
+											<h3>Gitorius</h3>
+										</header>
+									</article>
+								</div>
+							</div><div class="row">
+								<div class="4u 12u$(mobile)">
+									<article class="item">
+										<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
+										<header>
+											<h3>Gocd</h3>
+										</header>
+									</article>
+									<article class="item">
+										<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
+										<header>
+											<h3>Gogs</h3>
+										</header>
+									</article>
+								</div>
+								<div class="4u 12u$(mobile)">
+									<article class="item">
+										<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
+										<header>
+											<h3>Graylog</h3>
+										</header>
+									</article>
+									<article class="item">
+										<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
+										<header>
+											<h3>Habitrpg</h3>
+										</header>
+									</article>
+								</div>
+								<div class="4u$ 12u$(mobile)">
+									<article class="item">
+										<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
+										<header>
+											<h3>Hexo</h3>
+										</header>
+									</article>
+									<article class="item">
 
 						</div>
 					</section>
@@ -163,11 +246,22 @@
 						<div class="container">
 
 							<header>
-								<h2>About Me</h2>
+								<h2>About Us</h2>
 							</header>
+              <p>
+<br>Today:
+<br>Open Source entrepreneur building better companies from open business models and 2-way participation. I believe that open source should be the highest paid type of development, and I'm acting to make that reality.
 
-							<a href="#" class="image featured"><img src="images/pic08.jpg" alt="" /></a>
+<br>Past:
 
+<br>Dedicated teaching professional with an ability to motivate & inspire students to reach their full potential
+
+<br>Extensive international experience that reflects achievements in driving strategic planning, leading educational enhancement activities and fostering student learning.
+
+<br>• Strong understanding of both Asian and Western cultures
+<br>• Passion for improving student engagement & educational outcomes through the use of technology
+<br>• Bachelor of Arts in History & International Studies
+							</p>
 							<p>.........</p>
 
 						</div>
@@ -178,16 +272,11 @@
 						<div class="container">
 
 							<header>
-								<h2>Contact</h2>
+								<h2>Contact Us</h2>
 							</header>
 
-							<p><br>Name: Hoang Tran Manh
-								<br>STK: 711A21562994 transaction basis 108 Tran Hung Dao - Hoan Kiem - Ha Noi
-								<br>Vietnam Joint Stock Commercial Bank for Industry and Trade
-								<br>Mobile: 0984230489
-								<br>Yahoo: tranmanhhoangdt
-								<br>Gmail:tranmanhhoang@gmail.com
-								<br>389 Truong Dinh - Hoang Mai | 194 Le Thanh Nghi - Hai Ba Trung | 676 Quang Trung - Ha Dong - TP.HN</p>
+							<p>
+              </p>
 
 							<form method="post" action="#">
 								<div class="row">
